--- a/plugin.yml
+++ b/plugin.yml
@@ -1,9 +1,10 @@
 name: BigBrother
-version: 1.2.1-beta
+version: 1.3.0-beta
 api: 1.0.0
 description: "Allows the connection of Minecraft: PC clients to PocketMine-MP servers"
 author: shoghicp
 website: https://github.com/shoghicp/BigBrother
 load: STARTUP
 main: shoghicp\BigBrother\BigBrother
-softdepend: [SimpleAuth]
+softdepend:
+ - SimpleAuth
